--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "require": {
         "php": ">=7.4"
     },
+    "prefer-stable": true,
+    "homepage": "https://github.com/bim-g/wepesi-metadata-generator",
+    "keywords": ["metadata","web metadata","web app metadata","wepesi-metadata"],
     "license": "Apache-2.0",
     "support":{
         "email": "ibmussafb@gmail.com"
@@ -26,5 +29,13 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "spatie/phpunit-watcher": "^1.23"
+    },
+    "support": {
+        "email": "ibmussafb@gmail.com",
+        "issues": "https://github.com/bim-g/wepesi-metadata-generator/issues",
+        "forum": "https://github.com/bim-g/wepesi-metadata-generator/issues",
+        "wiki": "https://github.com/bim-g/wepesi-metadata-generator/issues",
+        "source": "https://github.com/bim-g/wepesi-metadata-generator",
+        "docs": "https://github.com/bim-g/wepesi-metadata-generator"
     }
 }
